Fix header titles for alarm and metric creation, add i18n messages.
Fix layout of create_alarm to eliminate scrollbar.

closes EUCA-6955

--- a/console/static/css/eucalyptus.css
+++ b/console/static/css/eucalyptus.css
@@ -568,6 +568,10 @@ ol li {
   color: #02405f;
 }
 
+.create-alarm .form-row label {
+    width: 150px;
+}
+
 .form-row label.long-label {
   width: 195px;
 }
